--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "npm run lint:js"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7"
   },
@@ -22,6 +23,8 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.12.1",
-    "prettier": "^2.3.2"
+    "node-sass": "^5.0.0",
+    "prettier": "^2.3.2",
+    "sass-loader": "^10.2.0"
   }
 }
